Index updated & 1st potfolio commit

--- a/potfolio.html
+++ b/potfolio.html
@@ -1,12 +1,13 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Home page</title>
-	<meta charset="utf-8">
+	<title>Potfolio</title>
+    <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
-<body >
+<body>
 	<header>
 		<div class="flex-container">
 		  <div class="flex-child">	
@@ -23,19 +24,15 @@
 	       </nav>
          </div>
        </div>
-	   <div class="clear"></div>
 </header>
-	<div class="Right">
-					<h1>I'm Siddhath Yonzone Tamang.</h1>
-					<h3>I am a Photographer.</h3>
-				</div>
-	<div class="left">
-	     <img src="\Users\Dell\OneDrive\Desktop\home.JPG" alt="my profile picture">	
-	</div>
-</body >
-
- <!-- comment -->
-<div class="cls"></div>
+   <main class="potfolio">
+   	<h1>Potfolio.</h1>
+   	<h3>My main motto in Photography is to</h3>
+    <h4>"Capture What is see."</h4></main>
+   <div class="Images">
+   	 <img src="\Users\Dell\OneDrive\Desktop\p\img21.jpg" alt="Old women in late 70.">
+   </div>
+</body>
 <footer> 
     	<nav class="social">
     		<li><a href="https://www.instagram.com/siddharth_yonzone_/"><img src="\Users\Dell\OneDrive\Desktop\Term1\instagram.png" alt="Instagram"/></a></li>
@@ -45,6 +42,5 @@
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
     	</div>
-</footer>
-
+    </footer>
 </html>
