--- a/CV.html
+++ b/CV.html
@@ -1,13 +1,12 @@
-<DOCTYPE HTML>
-<!DOCTYPE html>
+<!DOCTYPEhtml>
 <html>
 <head>
+	<title>Home page</title>
 	<meta charset="utf-8">
-	<title>Contact</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
-<body>
+<body >
 	<header>
 		<div class="flex-container">
 		  <div class="flex-child">	
@@ -24,34 +23,26 @@
 	       </nav>
          </div>
        </div>
+	   <div class="clear"></div>
 </header>
-<main>
-	<div class="Form">
-		<form action="/action_page.php" method="get">
-			<fieldset>
-				<legend>Personal Information:</legend>
-				 First Name:<br>
-				 <input type="txt" name="firstname"><br>
-				 Last Name:<br>
-				 <input type="txt" name="Lastname"><br>
-				 E-mail:<br>
-				 <input type="email" name="email"><br><br>
-			
-			     <textarea name="message" rows="7" cols="50"></textarea><br>
-			     <input type="submit" name="Submit">
-                 </fieldset>
-		</form>
-	</div>
-</main>
-</body>
+
+
+
+
+
+
+
+
+<div class="cls"></div>
 <footer> 
     	<nav class="social">
     		<li><a href="https://www.instagram.com/siddharth_yonzone_/"><img src="\Users\Dell\OneDrive\Desktop\Term1\instagram.png" alt="Instagram"/></a></li>
     		<li><a href="https://www.facebook.com/siddharth.yonzone"><img src="\Users\Dell\OneDrive\Desktop\Term1\facebook.png" alt="facebook"></a></li>
     		<li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="\Users\Dell\OneDrive\Desktop\Term1\gmail.png" alt="G-mail"></a></li><br>
-    	</nav><br><br>
+    	</nav>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
     	</div>
-    </footer>
+</footer>
+
 </html>
