--- a/potfolio.html
+++ b/potfolio.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<title>Potfolio</title>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 	<header>
@@ -17,7 +16,7 @@
 		    <nav class="main_nav">
 		     <ul>
 			    <li><a href="Contact.html">Contact</a></li>
-			    <li><a href="#">Curriculum Vitae</a></li>
+			    <li><a href="CV.html">Curriculum Vitae</a></li>
 			    <li><a href="potfolio.html">Potfolio</a></li>
 			    <li><a href="index.html">Home</a></li>
 		       </ul>
