Background and portfolio update

--- a/CV.html
+++ b/CV.html
@@ -17,16 +17,21 @@
 		     <ul>
 			    <li><a href="Contact.html">Contact</a></li>
 			    <li><a href="CV.html">Curriculum Vitae</a></li>
-			    <li><a href="potfolio.html">Potfolio</a></li>
+			    <li><a href="portfolio.html">Portfolio</a></li>
 			    <li><a href="index.html">Home</a></li>
 		       </ul>
 	       </nav>
          </div>
        </div>
 	   <div class="clear"></div>
-</header>
+    </header>
 
-
+     <main>
+     	<div class="cv_left">
+     		<img src="">
+     	
+    	
+    </main>
 
 
 
@@ -36,9 +41,9 @@
 <div class="cls"></div>
 <footer> 
     	<nav class="social">
-    		<li><a href="https://www.instagram.com/siddharth_yonzone_/"><img src="\Users\Dell\OneDrive\Desktop\Term1\instagram.png" alt="Instagram"/></a></li>
-    		<li><a href="https://www.facebook.com/siddharth.yonzone"><img src="\Users\Dell\OneDrive\Desktop\Term1\facebook.png" alt="facebook"></a></li>
-    		<li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="\Users\Dell\OneDrive\Desktop\Term1\gmail.png" alt="G-mail"></a></li><br>
+    		<li><a href="https://www.instagram.com/siddharth_yonzone_/"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/></a></li>
+    		<li><a href="https://www.facebook.com/siddharth.yonzone"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png" alt="facebook"></a></li>
+    		<li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\gmail.png" alt="G-mail"></a></li><br>
     	</nav>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
