--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,12 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Home page</title>
-	<meta charset="utf-8">
+	<title>Portfolio</title>
+    <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
-<body >
+<body>
 	<header>
 		<div class="flex-container">
 		  <div class="flex-child">	
@@ -17,26 +17,26 @@
 		     <ul>
 			    <li><a href="Contact.html">Contact</a></li>
 			    <li><a href="CV.html">Curriculum Vitae</a></li>
-			    <li><a href="portfolio.html">Portfolio</a></li>
+			    <li><a href="potfolio.html">Potfolio</a></li>
 			    <li><a href="index.html">Home</a></li>
 		       </ul>
 	       </nav>
          </div>
        </div>
-	   <div class="clear"></div>
 </header>
-	<div class="Right">
-					<h1>Hi!</h1>
-					<h2>I'm Siddhath Yonzone Tamang.</h2>
-					<h3>1st year BSc.Computing Student.</h3>
-				</div>
-	<div class="left">
-	     <img src="\Users\Dell\OneDrive\Desktop\home.JPG" alt="my profile picture">	
-	</div>
-</body >
+   <main class="potfolio">
+   	<h1>Potfolio.</h1>
+   <div class="Images">
+   	 <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\emile-perron-xrVDYZRGdw4-unsplash.jpg" alt="Macbook pro with codes and two book.">
+   	 <p>PlaceHolder Image.</p>
+   	 <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="Two gray pencil with yellow background">
+   	  <p>PlaceHolder Image.</p>
+   	 <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\pawel-czerwinski-APVgVX_yDDc-unsplash.jpg" alt="White and gray paper background">
+   	  <p>PlaceHolder Image.</p>
+   	 
 
- <!-- comment -->
-<div class="cls"></div>
+   </div>
+</body>
 <footer> 
     	<nav class="social">
     		<li><a href="https://www.instagram.com/siddharth_yonzone_/"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/></a></li>
@@ -46,6 +46,5 @@
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
     	</div>
-</footer>
-
+    </footer>
 </html>
