--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
 		     <ul>
 			    <li><a href="Contact.html">Contact</a></li>
 			    <li><a href="CV.html">Curriculum Vitae</a></li>
-			    <li><a href="potfolio.html">Potfolio</a></li>
+			    <li><a href="portfolio.html">Portfolio</a></li>
 			    <li><a href="index.html">Home</a></li>
 		       </ul>
 	       </nav>
@@ -46,9 +46,9 @@
 </body>
 <footer> 
     	<nav class="social">
-    		<li><a href="https://www.instagram.com/siddharth_yonzone_/"><img src="\Users\Dell\OneDrive\Desktop\Term1\instagram.png" alt="Instagram"/></a></li>
-    		<li><a href="https://www.facebook.com/siddharth.yonzone"><img src="\Users\Dell\OneDrive\Desktop\Term1\facebook.png" alt="facebook"></a></li>
-    		<li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="\Users\Dell\OneDrive\Desktop\Term1\gmail.png" alt="G-mail"></a></li><br>
+    		<li><a href="https://www.instagram.com/siddharth_yonzone_/"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/></a></li>
+    		<li><a href="https://www.facebook.com/siddharth.yonzone"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png" alt="facebook"></a></li>
+    		<li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\gmail.png" alt="G-mail"></a></li><br>
     	</nav><br><br>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
