CV update & Style

--- a/CV.html
+++ b/CV.html
@@ -26,10 +26,43 @@
 	   <div class="clear"></div>
     </header>
 
-     <main>
-     	<div class="cv_left">
-     		<img src="">
-     	
+     <main class="cv_main">
+     <h1>Siddharth Yonzone Tamang.</h1><br>
+     <p>Boudha-6, Tinchuli<br>
+     Kathmandu, Nepal.<br></p>
+     Phone No: +977 9803552037<br><br>
+     <h2>Objective:</h2><br>
+     <p>To make a positive impact in my field of activity leading to organisation <br>
+     growth by creative application of my value based convictions and <br>
+     professional divinity by putting my all efforts in the work assigned to me in an <br>
+     organised where i can grow with the oraganisation.<br><br></p>
+     <h3>Education:</h3><br>
+     <p>Naaya Aayam Multi-Disciplinary Institute (NAMI) Collage.<br>
+     Gokarneshwar-7, Kathmandu <br>
+     Nepal.<br></p>
+     <ul>
+     	<li>BSc. Computer Science '1st Year'</li>
+     </ul> 
+     <p>RAI School<br>
+     Balmandir compound, Naxal <br>
+     Kathmandu, Nepal.</p>
+     <ul>
+     	<li>HSC -2020</li>
+     	<li>GPA -6.5</li>
+     	<li>SSC -2018</li>
+     </ul>
+     <h3>Skils:</h3>
+     <ul>
+     	<li>Can Speak 3 languages.</li>
+     	<li>Team work oriented.</li>
+
+     </ul>
+     <h3>Hobbies:</h3>
+     Gaming, Photography, Travel, Swimming.
+
+
+
+
     	
     </main>
 
