Logo and background update

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,23 +7,22 @@
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
-	<header>
-		<div class="flex-container">
-		  <div class="flex-child">	
-		    <div class="logo"><img src="\Users\Dell\OneDrive\Desktop\Term1\logo.jpg"></div>
-	    </div>
-	      <div class="flex-child">
-		    <nav class="main_nav">
-		     <ul>
-			    <li><a href="Contact.html">Contact</a></li>
-			    <li><a href="CV.html">Curriculum Vitae</a></li>
-			    <li><a href="potfolio.html">Potfolio</a></li>
+	<div class="container">
+		<div class="navbar">
+		    <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\logo1.jpg" class="logo">
+		    <nav>
+		     <ul id="menulist">
 			    <li><a href="index.html">Home</a></li>
-		       </ul>
+			    <li><a href="portfolio.html">Potfolio</a></li>
+			    <li><a href="CV.html">Curriculum Vitae</a></li>
+			    <li><a href="Contact.html">Contact</a></li>
+			</ul>
 	       </nav>
-         </div>
-       </div>
-</header>
+	       <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\menu.png" class="menu" onclick="togglemenu()">
+	    </div>
+	     </div>
+	   <div class="clear"></div>
+</div>
    <main class="potfolio">
    	<h1>Potfolio.</h1>
    <div class="Images">
@@ -38,11 +37,11 @@
    </div>
 </body>
 <footer> 
-    	<nav class="social">
-    		<li><a href="https://www.instagram.com/siddharth_yonzone_/"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/></a></li>
-    		<li><a href="https://www.facebook.com/siddharth.yonzone"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png" alt="facebook"></a></li>
-    		<li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\gmail.png" alt="G-mail"></a></li><br>
-    	</nav>
+    <div class="social">
+    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/>
+    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png" alt="facebook"/>
+    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\twitter.png" alt="twitter"/>
+    	</div>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
     	</div>
