--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="Style.css">
-
 </head>
 <body >
 	<div class="container">
 		<div class="navbar">
-		    <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\logo.jpg" class="logo">
+		    <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\logo1.jpg" class="logo">
 		    <nav>
 		     <ul id="menulist">
-			    <li><a href="Contact.html">Contact</a></li>
-			    <li><a href="CV.html">Curriculum Vitae</a></li>
-			    <li><a href="portfolio.html">Portfolio</a></li>
 			    <li><a href="index.html">Home</a></li>
+			    <li><a href="portfolio.html">Potfolio</a></li>
+			    <li><a href="CV.html">Curriculum Vitae</a></li>
+			    <li><a href="Contact.html">Contact</a></li>
 			</ul>
 	       </nav>
 	       <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\menu.png" class="menu" onclick="togglemenu()">
@@ -39,12 +38,10 @@
  <!-- comment -->
 <div class="cls"></div>
 <footer> 
-    	<div class="social">
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png">
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png">
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\gmail.png">
-
-
+    		<div class="social">
+    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/>
+    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png" alt="facebook"/>
+    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\twitter.png" alt="twitter"/>
     	</div>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
