--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body >
-	<div class="container">
-		<div class="navbar">
-		    <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\logo1.jpg" class="logo">
-		    <nav>
-		     <ul id="menulist">
-			    <li><a href="index.html">Home</a></li>
-			    <li><a href="portfolio.html">Potfolio</a></li>
-			    <li><a href="CV.html">Curriculum Vitae</a></li>
-			    <li><a href="Contact.html">Contact</a></li>
-			</ul>
-	       </nav>
-	       <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\menu.png" class="menu" onclick="togglemenu()">
-	    </div>
-	     </div>
+	<header>
+   <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\logo.jpg" class="logo">
+  <input type="checkbox" id="nav-toggle" class="nav-toggle">
+  <nav>
+    <ul>
+         <li><a href="index.html">Home</a></li>
+	     <li><a href="portfolio.html">Potfolio</a></li>
+	     <li><a href="CV.html">Curriculum Vitae</a></li>
+		 <li><a href="Contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <label for="nav-toggle" class="nav-toggle-label">
+    <span></span>
+  </label>
+</header>
 	   <div class="clear"></div>
 </div>
+
+
+
+
 <div class="container">
 	<div class="Right">
 					<h1>Hi!</h1>
@@ -47,17 +52,4 @@
     		CopyRight Siddharth Yonzone 2021
     	</div>
 </footer>
-<script>
-	var menulist = document.getElementById('menulist');
-	menulist.style.maxHeight = "0px";
-	function togglemenu() {
-		if (menulist.style.maxHeight == "opx"){
-			      menulist.style.maxHeight ="130px"
-		} 
-		else{
-			  menulist.style.maxHeight = "0px";
-		}
-		// body...
-	}
-</script>
 </html>
