1st Site report

--- a/CV.html
+++ b/CV.html
@@ -1,14 +1,14 @@
-<!DOCTYPEhtml>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Home page</title>
+	<title>Curriculum Vitae</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body >
 	<header>
-   <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\logo.jpg" class="logo">
+   <img src="logo.jpg" alt="mylogo" class="logo">
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
@@ -16,14 +16,13 @@
          <li><a href="portfolio.html">Potfolio</a></li>
          <li><a href="CV.html">Curriculum Vitae</a></li>
          <li><a href="Contact.html">Contact</a></li>
+         <li><a href="SiteReport.html">Site Report</a></li>
     </ul>
   </nav>
   <label for="nav-toggle" class="nav-toggle-label">
     <span></span>
   </label>
 </header>
-       <div class="clear"></div>
-</div>
 <main class="cv_main">
      <h1>Siddharth Yonzone Tamang.</h1><br>
      <p>Boudha-6, Tinchuli<br>
@@ -56,29 +55,17 @@
 
      </ul>
      <h3>Hobbies:</h3>
-     Gaming, Photography, Travel, Swimming.
-
-
-
-
-    	
+     Gaming, Photography, Travel, Swimming.	
     </main>
-
-
-
-
-
-
-<div class="cls"></div>
 <footer> 
     	<div class="social">
-            <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/>
-            <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png" alt="facebook"/>
-            <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\twitter.png" alt="twitter"/>
+            <img src="instagram.png" alt="Instagram"/>
+            <img src="facebook.png" alt="facebook"/>
+            <img src="twitter.png" alt="twitter"/>
         </div>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
     	</div>
 </footer>
-
+</body>
 </html>
