--- a/Contact.html
+++ b/Contact.html
@@ -1,6 +1,5 @@
-<DOCTYPE HTML>
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Contact</title>
@@ -9,22 +8,22 @@
 </head>
 <body>
 	<header>
-   <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\logo.jpg" class="logo">
+   <img src="logo.jpg" alt="mylogo" class="logo">
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
-         <li><a href="index.html">Home</a></li>
+       <li><a href="index.html">Home</a></li>
 	     <li><a href="portfolio.html">Potfolio</a></li>
 	     <li><a href="CV.html">Curriculum Vitae</a></li>
-		 <li><a href="Contact.html">Contact</a></li>
+		   <li><a href="Contact.html">Contact</a></li>
+		   <li><a href="SiteReport.html">Site Report</a></li>
     </ul>
   </nav>
   <label for="nav-toggle" class="nav-toggle-label">
     <span></span>
   </label>
 </header>
-	   <div class="clear"></div>
-</div><br><br>
+
 
 
 
@@ -34,11 +33,11 @@
 			<fieldset>
 				<legend>Personal Information:</legend>
 				 First Name:<br>
-				 <input type="txt" name="firstname"><br>
+				 <input type="text" name="Firstname"><br>
 				 Last Name:<br>
-				 <input type="txt" name="Lastname"><br>
+				 <input type="text" name="Lastname"><br>
 				 E-mail:<br>
-				 <input type="email" name="email"><br><br>
+				 <input type="email" name="E-mail"><br><br>
 			
 			     <textarea name="message" rows="7" cols="50"></textarea><br>
 			     <input type="submit" name="Submit">
@@ -46,15 +45,15 @@
 		</form>
 	</div>
 </main>
-</body>
 <footer> 
     	<div class="social">
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/>
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png" alt="facebook"/>
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\twitter.png" alt="twitter"/>
+    		<img src="instagram.png" alt="Instagram"/>
+    		<img src="facebook.png" alt="facebook"/>
+    		<img src="twitter.png" alt="twitter"/>
     	</div>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
     	</div>
     </footer>
+</body>
 </html>
