--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Portfolio</title>
     <meta charset="utf-8">
@@ -8,43 +8,41 @@
 </head>
 <body>
 	<header>
-   <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\logo.jpg" class="logo">
+   <img src="logo.jpg" alt="my logo" class="logo">
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
-         <li><a href="index.html">Home</a></li>
-	     <li><a href="portfolio.html">Potfolio</a></li>
-	     <li><a href="CV.html">Curriculum Vitae</a></li>
+       <li><a href="index.html">Home</a></li>
+	    <li><a href="portfolio.html">Potfolio</a></li>
+	    <li><a href="CV.html">Curriculum Vitae</a></li>
 		 <li><a href="Contact.html">Contact</a></li>
+       <li><a href="SiteReport.html">Site Report</a></li>
     </ul>
   </nav>
   <label for="nav-toggle" class="nav-toggle-label">
     <span></span>
   </label>
 </header>
-	   <div class="clear"></div>
-</div>
 <main class="potfolio">
    	<h1>Potfolio.</h1>
    <div class="Images">
-   	 <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\emile-perron-xrVDYZRGdw4-unsplash.jpg" alt="Macbook pro with codes and two book.">
+   	 <img src="emile-perron-xrVDYZRGdw4-unsplash.jpg" alt="Macbook pro with codes and two book.">
    	 <p>PlaceHolder Image.</p>
-   	 <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="Two gray pencil with yellow background">
+   	 <img src="joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="Two gray pencil with yellow background">
    	  <p>PlaceHolder Image.</p>
-   	 <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\pawel-czerwinski-APVgVX_yDDc-unsplash.jpg" alt="White and gray paper background">
+   	 <img src="pawel-czerwinski-APVgVX_yDDc-unsplash.jpg" alt="White and gray paper background">
    	  <p>PlaceHolder Image.</p>
-   	 
-
-   </div>
-</body>
+   	 </div>
+      </main>
 <footer> 
     <div class="social">
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/>
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png" alt="facebook"/>
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\twitter.png" alt="twitter"/>
+    		<img src="instagram.png" alt="Instagram"/>
+    		<img src="facebook.png" alt="facebook"/>
+    		<img src="twitter.png" alt="twitter"/>
     	</div>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
     	</div>
     </footer>
+</body>    
 </html>
