--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPEhtml>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<title>Home page</title>
 	<meta charset="utf-8">
@@ -8,26 +8,21 @@
 </head>
 <body >
 	<header>
-   <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\logo.jpg" class="logo">
+   <img src="logo.jpg" alt="my logo" class="logo">
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
-         <li><a href="index.html">Home</a></li>
+       <li><a href="index.html">Home</a></li>
 	     <li><a href="portfolio.html">Potfolio</a></li>
 	     <li><a href="CV.html">Curriculum Vitae</a></li>
-		 <li><a href="Contact.html">Contact</a></li>
+		   <li><a href="Contact.html">Contact</a></li>
+		   <li><a href="SiteReport.html">Site Report</a></li>
     </ul>
   </nav>
   <label for="nav-toggle" class="nav-toggle-label">
     <span></span>
   </label>
 </header>
-	   <div class="clear"></div>
-</div>
-
-
-
-
 <div class="container">
 	<div class="Right">
 					<h1>Hi!</h1>
@@ -35,21 +30,19 @@
 					<h3>1st year BSc.Computing Student.</h3>
 				</div>
 	<div class="left">
-	     <img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\Profile1.JPG" alt="my profile picture">	
+	     <img src="Profile1.JPG" alt="my profile picture">	
 	</div>
 </div>
-</body >
 
- <!-- comment -->
-<div class="cls"></div>
 <footer> 
-    		<div class="social">
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\instagram.png" alt="Instagram"/>
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\facebook.png" alt="facebook"/>
-    		<img src="\Users\Dell\OneDrive\Desktop\Assignment_T1\twitter.png" alt="twitter"/>
-    	</div>
-    	<div class="CopyRight">
-    		CopyRight Siddharth Yonzone 2021
-    	</div>
+  <div class="social">
+    <img src="instagram.png" alt="Instagram"/>
+    <img src="facebook.png" alt="facebook"/>
+    <img src="twitter.png" alt="twitter"/>
+   </div>
+  <div class="CopyRight">
+    CopyRight Siddharth Yonzone 2021
+  </div>
 </footer>
+</body>
 </html>
