--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Home page</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body >
@@ -23,6 +23,7 @@
     <span></span>
   </label>
 </header>
+<main class="index-main">
 <div class="container">
 	<div class="Right">
 					<h1>Hi!</h1>
@@ -33,7 +34,7 @@
 	     <img src="Profile1.JPG" alt="my profile picture">	
 	</div>
 </div>
-
+</main>
 <footer> 
   <div class="social">
     <img src="instagram.png" alt="Instagram"/>
