--- a/CV.html
+++ b/CV.html
@@ -55,7 +55,7 @@
 
      </ul>
      <h3>Hobbies:</h3>
-     Gaming, Photography, Travel, Swimming.	
+      Photography, Travel, Swimming.	
     </main>
 <footer> 
     	<div class="social">
