--- a/SiteReport.html
+++ b/SiteReport.html
@@ -25,10 +25,20 @@
 </header>
 <main class="report">
 	<h2>Experience & Learning:</h2>
+	  <p>It was a fascinating experience for me to work on this assignment. There were many ups and downs along the way. Due to this, I have learned a lot, from styling & designing to making responsive hamburger icons. 
+Most of the time had problems with making my webpage responsive, whereas the styling and the content remained the same. 
+As for the style, I wanted to be simple but effective designs. Easy to view,   and which is easy to navigate through. As it is said:</p>
+  <h4>                          “Think more, Design less"</h4>
+                                                        <h5>-Ellen Lupton </h5>   
+                                                       <!-- Lupton, E., n.d. https://www.mooz.reviews/inspiring-quotes-for-web-designers/. [Online] 
+Available at: https://www.mooz.reviews/inspiring-quotes-for-web-designers/
+[Accessed 1 july 2021].-->
 
 
-</main>
+</main><hr>
 	<div class="validation">
+		<h2>Validation Images:</h2>
+		<h3>‎Sunday, ‎June ‎27, ‎2021</h3>
 		<p> Validation for Index.html</p><br>
 		<img src="Validation_index.png" alt="validation image of index.html"><br>
 		<p> Validation for Portfolio.html</p><br>
@@ -37,8 +47,12 @@
 		<img src="Validation_cv.png" alt="validation image of cv.html"><br>
 		<p> Validation for Contact.html</p><br>
 		<img src="Validation_contact.png" alt="validation image of contact.html"><br>
+		<h4>During validation, there were some minor bugs and issue which were solved easily.</h4>
 	</div>
-	
+	<hr>
+	<div class="progress">
+		
+	</div>
 </main>
 
 
