--- a/portfolio.html
+++ b/portfolio.html
@@ -24,15 +24,26 @@
   </label>
 </header>
 <main class="potfolio">
-   	<h1>Potfolio.</h1>
-   <div class="Images">
+   <h1>Potfolio.</h1>
+   <div class="row">
+  <div class="column">
+    <div class="content">
    	 <img src="emile-perron-xrVDYZRGdw4-unsplash.jpg" alt="Macbook pro with codes and two book.">
-   	 <p>PlaceHolder Image.</p>
+   	 <p>PlaceHolder Image.</p></div></div>
+   <div class="column">
+    <div class="content">
    	 <img src="joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="Two gray pencil with yellow background">
-   	  <p>PlaceHolder Image.</p>
-   	 <img src="pawel-czerwinski-APVgVX_yDDc-unsplash.jpg" alt="White and gray paper background">
-   	  <p>PlaceHolder Image.</p>
+   	  <p>PlaceHolder Image.</p></div></div>
+   <div class="column">
+    <div class="content">
+   	 <img src="andrew-ridley-jR4Zf-riEjI-unsplash.jpg" alt="triangle degin wall full of diffrent colour ">
+   	  <p>PlaceHolder Image.</p></div></div>
+        <div class="column">
+    <div class="content">
+       <img src="pawel-czerwinski-APVgVX_yDDc-unsplash.jpg" alt="White and gray paper background">
+        <p>PlaceHolder Image.</p></div></div>
    	 </div>
+      </div>
       </main>
 <footer> 
     <div class="social">
