--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body >
 	<header>
-   <img src="logo.jpg" alt="my logo" class="logo">
+   <img src="Images\logo.jpg" alt="my logo" class="logo">
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
        <li><a href="index.html">Home</a></li>
-	     <li><a href="portfolio.html">Potfolio</a></li>
+	     <li><a href="portfolio.html">Portfolio</a></li>
 	     <li><a href="CV.html">Curriculum Vitae</a></li>
 		   <li><a href="Contact.html">Contact</a></li>
 		   <li><a href="SiteReport.html">Site Report</a></li>
@@ -29,17 +29,22 @@
 					<h1>Hi!</h1>
 					<h2>I'm Siddhath Yonzone Tamang.</h2>
 					<h3>1st year BSc.Computing Student.</h3>
-				</div>
+				
+				<div class="button">
+				<button class="button1">Curriculum Vitae
+					<a href="/Users/Dell/OneDrive/Desktop/Assignment_T1/CV.html"></a></button>
+				<button class="button2">Contact</button></div>
+			</div><br>
 	<div class="left">
-	     <img src="Profile1.JPG" alt="my profile picture">	
+	     <img src="Images\Profile1.JPG" alt="my profile picture">	
 	</div>
 </div>
 </main>
 <footer> 
   <div class="social">
-    <img src="instagram.png" alt="Instagram"/>
-    <img src="facebook.png" alt="facebook"/>
-    <img src="twitter.png" alt="twitter"/>
+    <a href="https://www.instagram.com/siddharth_yonzone_/"><img src="Images\instagram.png" alt="Instagram"/></a>
+    <a href="https://www.facebook.com/siddharth.yonzone/"><img src="Images\facebook.png" alt="facebook"/></a>
+    <a href="https://twitter.com/Yonzonesid"><img src="Images\twitter.png" alt="twitter"/></a>
    </div>
   <div class="CopyRight">
     CopyRight Siddharth Yonzone 2021
