--- a/CV.html
+++ b/CV.html
@@ -8,7 +8,7 @@
 </head>
 <body >
 	<header>
-   <img src="logo.jpg" alt="mylogo" class="logo">
+   <img src="Images\logo.jpg" alt="mylogo" class="logo">
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
@@ -28,12 +28,12 @@
      <p>Boudha-6, Tinchuli<br>
      Kathmandu, Nepal.<br></p>
      Phone No: +977 9803552037<br><br>
-     <h2>Objective:</h2><br>
-     <p>To make a positive impact in my field of activity leading to organisation <br>
-     growth by creative application of my value based convictions and <br>
-     professional divinity by putting my all efforts in the work assigned to me in an <br>
-     organised where i can grow with the oraganisation.<br><br></p>
-     <h3>Education:</h3><br>
+     <h2>About Me:</h2>
+     <p>Have a positive impact on my field of activity,<br>
+      grow through the creative application of my beliefs based on values and professional divinity,<br>
+      and put all efforts into the work assigned to me. In an organized way, I can grow with the organization.<br>
+      I showed a high level of motivation, work spirit, and teamwork to achieve the expected score.</p>
+     <h3>Education:</h3>
      <p>Naaya Aayam Multi-Disciplinary Institute (NAMI) Collage.<br>
      Gokarneshwar-7, Kathmandu <br>
      Nepal.<br></p>
@@ -48,10 +48,12 @@
      	<li>GPA -6.5</li>
      	<li>SSC -2018</li>
      </ul>
-     <h3>Skils:</h3>
+     <h3>Skills:</h3>
      <ul>
-     	<li>Can Speak 3 languages.</li>
+     	<li>Fluent in 3 languages.(Nepali, English and Hindi)</li>
      	<li>Team work oriented.</li>
+      <li>Reasonably Experienced in problem solving</li>
+      <li>Listening and Communication</li>
 
      </ul>
      <h3>Hobbies:</h3>
@@ -59,9 +61,9 @@
     </main>
 <footer> 
     	<div class="social">
-            <img src="instagram.png" alt="Instagram"/>
-            <img src="facebook.png" alt="facebook"/>
-            <img src="twitter.png" alt="twitter"/>
+            <img src="Images\instagram.png" alt="Instagram"/>
+            <img src="Images\facebook.png" alt="facebook"/>
+            <img src="Images\twitter.png" alt="twitter"/>
         </div>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
