--- a/Contact.html
+++ b/Contact.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 	<header>
-   <img src="logo.jpg" alt="mylogo" class="logo">
+   <img src="Images\logo.jpg" alt="mylogo" class="logo">
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
        <li><a href="index.html">Home</a></li>
-	     <li><a href="portfolio.html">Potfolio</a></li>
+	     <li><a href="portfolio.html">Portfolio</a></li>
 	     <li><a href="CV.html">Curriculum Vitae</a></li>
 		   <li><a href="Contact.html">Contact</a></li>
 		   <li><a href="SiteReport.html">Site Report</a></li>
@@ -27,8 +27,8 @@
 
 
 
-<main>
-	<div class="Form">
+<main class="Form">
+		<h1>Contact:</h1>
 		<form action="/action_page.php" method="get">
 			<fieldset>
 				<legend>Personal Information:</legend>
@@ -42,14 +42,17 @@
 			     <textarea name="message" rows="7" cols="50"></textarea><br>
 			     <input type="submit" name="Submit">
                  </fieldset>
+        <p><a href="mailto:yonzonesiddharth7@gmail.com">Send email</a></p>
+
 		</form>
+
 	</div>
 </main>
 <footer> 
     	<div class="social">
-    		<img src="instagram.png" alt="Instagram"/>
-    		<img src="facebook.png" alt="facebook"/>
-    		<img src="twitter.png" alt="twitter"/>
+    		<img src="Images\instagram.png" alt="Instagram"/>
+    		<img src="Images\facebook.png" alt="facebook"/>
+    		<img src="Images\twitter.png" alt="twitter"/>
     	</div>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
