--- a/SiteReport.html
+++ b/SiteReport.html
@@ -8,12 +8,12 @@
 </head>
 <body >
 	<header>
-   <img src="logo.jpg" alt="my logo" class="logo">
+   <img src="Images\logo.jpg" alt="my logo" class="logo">
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
        <li><a href="index.html">Home</a></li>
-	     <li><a href="portfolio.html">Potfolio</a></li>
+	     <li><a href="portfolio.html">Portfolio</a></li>
 	     <li><a href="CV.html">Curriculum Vitae</a></li>
 		   <li><a href="Contact.html">Contact</a></li>
 		   <li><a href="SiteReport.html">Site Report</a></li>
@@ -33,26 +33,73 @@ As for the style, I wanted to be simple but effective designs. Easy to view,   a
                                                        <!-- Lupton, E., n.d. https://www.mooz.reviews/inspiring-quotes-for-web-designers/. [Online] 
 Available at: https://www.mooz.reviews/inspiring-quotes-for-web-designers/
 [Accessed 1 july 2021].-->
+<div class="ups_and_downs">
+		<h3>Ups:</h3>
+		<li>From this assignment i got to know my limits and skills.</li>
+		<li>I got to learn new codes, style and improve my skills.</li>
+		<li>Learning how to debug an error.</li>
+		<li>Learning how to use git-hub and its branches.</li>
+		<h3>Downs:</h3>
+		<li>A small mistake can change the whole website.</li>
+		<h4>Conclusion:</h4>
+		<p>From this assignment I got to improve my skills, creativeness</p>
+	</div>
 
 
 </main><hr>
 	<div class="validation">
 		<h2>Validation Images:</h2>
-		<h3>‎Sunday, ‎June ‎27, ‎2021</h3>
-		<p> Validation for Index.html</p><br>
-		<img src="Validation_index.png" alt="validation image of index.html"><br>
-		<p> Validation for Portfolio.html</p><br>
-		<img src="Validation_portfolio.png" alt="validation image of portfolio.html"><br>
-		<p> Validation for CV.html</p><br>
-		<img src="Validation_cv.png" alt="validation image of cv.html"><br>
-		<p> Validation for Contact.html</p><br>
-		<img src="Validation_contact.png" alt="validation image of contact.html"><br>
-		<h4>During validation, there were some minor bugs and issue which were solved easily.</h4>
+		<h3>‎ ‎June ‎27, ‎2021</h3>
+		<p> Validation for Index.HTML</p><br>
+		<img src="Images\Validation_index.png" alt="validation image of index.html"><br>
+		<p> Validation for Portfolio.HTML</p><br>
+		<img src="Images\Validation_portfolio.png" alt="validation image of portfolio.html"><br>
+		<p> Validation for CV.HTML</p><br>
+		<img src="Images\Validation_cv.png" alt="validation image of cv.html"><br>
+		<p> Validation for Contact.HTML</p><br>
+		<img src="Images\Validation_contact.png" alt="validation image of contact.html"><br>
+		<p>During validation, there were some minor bugs and issue which were solved easily.</p>
 	</div>
 	<hr>
-	<div class="progress">
-		
+	<div class="Degin">
+		<h2>Previous Deign:</h2>
+		<h3>June 6, 2020</h3>
+		<img src="Images\1st.png" alt="previous style of my webpage">
+		<p>This was my first commit with index.HTML and portfolio. </p>
+
+		<h3>  June 7, 2021</h3>
+		<img src="Images\contact.png" alt="previous style of my webpage">
+		<p>Contact.HTML and index.HTML was updated </p>
+		<h3>  June 9, 2021</h3>
+		<img src="Images\cv.png" alt="previous style of my webpage">
+		<p>I created CV.HTML</p>
+		<h3>  June 13, 2021</h3>
+		<img src="Images\portfolio.png" alt="Screenshot of portfolio">
+		<p>Portfolio was updated.</p>
+		<h3>  June 14, 2021</h3>
+		<p>Some major changes in Style.CSS</p>
+		<h3>  June 20, 2021</h3>
+		<p>First try to create hamburger icon and menu.</p>
+		<h3>  June 23-24, 2021</h3>
+		<p>Logo, Background and Style.CSS were updated</p>
+		<h3>  June 27, 2021</h3>
+		<img src="Images\sitereport.png" alt="Screenshot of SiteReport.html">
+		<p>Site Report Created</p>
+		<h3>  June 28, 2021</h3>
+		<img src="Images\menu.png" alt="Screenshot of responsive hamburger menu">
+		<p>Hamburger Menu Created</p>
+		<h3>  July 1st, 2021</h3>
+		<img src="Images\final_index.png" alt="Screenshot of final home page">
+		<img src="Images\final_portfolio.png" alt="Screenshot of final portfoli">
+		<img src="Images\final_cv.png" alt="Screenshot of final CV">
+		<img src="Images\final_contact.png" alt="Screenshot of contact">
+		<img src="Images\final_sitereport.png" alt="Screenshot of Site Report">
+		<p>Finalized Web page with responsive Hamburger icon. </p>
+
+
+		<hr>
 	</div>
+	
 </main>
 
 
@@ -63,9 +110,9 @@ Available at: https://www.mooz.reviews/inspiring-quotes-for-web-designers/
 
 <footer> 
   <div class="social">
-    <img src="instagram.png" alt="Instagram"/>
-    <img src="facebook.png" alt="facebook"/>
-    <img src="twitter.png" alt="twitter"/>
+    <img src="Images\instagram.png" alt="Instagram"/>
+    <img src="Images\facebook.png" alt="facebook"/>
+    <img src="Images\twitter.png" alt="twitter"/>
    </div>
   <div class="CopyRight">
     CopyRight Siddharth Yonzone 2021
