--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 	<header>
-   <img src="logo.jpg" alt="my logo" class="logo">
+   <img src="Images\logo.jpg" alt="my logo" class="logo">
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
        <li><a href="index.html">Home</a></li>
-	    <li><a href="portfolio.html">Potfolio</a></li>
+	    <li><a href="portfolio.html">Portfolio</a></li>
 	    <li><a href="CV.html">Curriculum Vitae</a></li>
 		 <li><a href="Contact.html">Contact</a></li>
        <li><a href="SiteReport.html">Site Report</a></li>
@@ -24,32 +24,36 @@
   </label>
 </header>
 <main class="potfolio">
-   <h1>Potfolio.</h1>
+   <h1>Portfolio.</h1>
    <div class="row">
   <div class="column">
     <div class="content">
-   	 <img src="emile-perron-xrVDYZRGdw4-unsplash.jpg" alt="Macbook pro with codes and two book.">
-   	 <p>PlaceHolder Image.</p></div></div>
+   	 <img src="Images\emile-perron-xrVDYZRGdw4-unsplash.jpg" alt="Macbook pro with codes and two book."></div>
+   	 <p>PlaceHolder Image.</p></div>
    <div class="column">
     <div class="content">
-   	 <img src="joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="Two gray pencil with yellow background">
-   	  <p>PlaceHolder Image.</p></div></div>
+   	 <img src="Images\joanna-kosinska-1_CMoFsPfso-unsplash.jpg" alt="Two gray pencil with yellow background"></div>
+   	  <p>PlaceHolder Image.</p></div>
    <div class="column">
     <div class="content">
-   	 <img src="andrew-ridley-jR4Zf-riEjI-unsplash.jpg" alt="triangle degin wall full of diffrent colour ">
-   	  <p>PlaceHolder Image.</p></div></div>
+   	 <img src="Images\andrew-ridley-jR4Zf-riEjI-unsplash.jpg" alt="triangle degin wall full of diffrent colour "></div>
+   	  <p>PlaceHolder Image.</p></div>
         <div class="column">
     <div class="content">
-       <img src="pawel-czerwinski-APVgVX_yDDc-unsplash.jpg" alt="White and gray paper background">
-        <p>PlaceHolder Image.</p></div></div>
+       <img src="Images\pawel-czerwinski-APVgVX_yDDc-unsplash.jpg" alt="White and gray paper background"></div>
+        <p>PlaceHolder Image.</p></div>
+         <div class="column">
+    <div class="content">
+       <img src="Images\joanna-kosinska-7ACuHoezUYk-unsplash.jpg" alt="White and gray paper background"></div>
+        <p>PlaceHolder Image.</p></div>
    	 </div>
       </div>
       </main>
 <footer> 
     <div class="social">
-    		<img src="instagram.png" alt="Instagram"/>
-    		<img src="facebook.png" alt="facebook"/>
-    		<img src="twitter.png" alt="twitter"/>
+    		<img src="Images\instagram.png" alt="Instagram"/>
+    		<img src="Images\facebook.png" alt="facebook"/>
+    		<img src="Images\twitter.png" alt="twitter"/>
     	</div>
     	<div class="CopyRight">
     		CopyRight Siddharth Yonzone 2021
