Hamburger menu re-done and final update

--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 <body >
 	<header>
    <img src="Images/logo.jpg" alt="my logo" class="logo">
-<!--  Checkbox for Hamburger icon --> 
+
+
+ <!-- toggle for Hamburger icon --> 
+  <label for="nav-toggle" class="nav-toggle-label">
+  <span></span>
+  <span></span>
+  <span></span>
+  </label>
+  <!--  Checkbox for Hamburger icon --> 
 
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
-<!-- Navigation Menu --> 
+  <!-- Navigation Menu -->
   <nav>
     <ul>
        <li><a href="index.html">Home</a></li>
@@ -22,29 +30,27 @@
 		   <li><a href="SiteReport.html">Site Report</a></li>
     </ul>
   </nav>
-<!-- toggle for Hamburger icon --> 
-  <label for="nav-toggle" class="nav-toggle-label">
-    <span></span>
-  </label>
+
 </header>
+<div class="space"></div>
 <!-- Main Index Starts here. --> 
-<main class="index-main">
-<div class="container">
-	<div class="Right">
-					<h1>Hi!</h1>
-					<h2>I'm Siddhath Yonzone Tamang.</h2>
-					<h3>1st year BSc.Computing Student.</h3>
-<!--  Button icon --> 
-				<div class="button">
-				<button class="button1">Curriculum Vitae</button>
-				<button class="button2">Contact</button></div>
-			</div><br>
-<!--  Portfolio image --> 
-	<div class="left">
-	     <img src="Images/Profile1.JPG" alt="my profile picture">	
-	</div>
-</div>
+<main class="rmain">
+  <div class="Container"></div>
+    <div class="left">
+      <h1>Hi!</h1><br>
+          <h2>I'm Siddhath Yonzone Tamang.</h2><br>
+          <h3>1st year BSc.Computing Student.</h3><br>
+          <div class="button">
+        <button class="button1"><span>Curriculum Vitae</span></button>
+        <button class="button2"><span>Contact</span></button> </div>
+      </div>
+
+    <div class="right">
+      <img src="Images/Profile1.JPG" alt="my profile picture">
+    </div>
+
 </main>
+
 <!--  Footer Starts here --> 
 <footer> 
   <div class="social">
