--- a/CV.html
+++ b/CV.html
@@ -8,23 +8,29 @@
 </head>
 <body >
 	<header>
-   <img src="Images/logo.jpg" alt="mylogo" class="logo">
-<!--  Checkbox for Hamburger icon --> 
+   <img src="Images/logo.jpg" alt="my logo" class="logo">
+
+
+ <!-- toggle for Hamburger icon --> 
+  <label for="nav-toggle" class="nav-toggle-label">
+  <span></span>
+  <span></span>
+  <span></span>
+  </label>
+  <!--  Checkbox for Hamburger icon --> 
+
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
-<!-- Navigation Menu --> 
+  <!-- Navigation Menu -->
   <nav>
     <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="portfolio.html">Potfolio</a></li>
-         <li><a href="CV.html">Curriculum Vitae</a></li>
-         <li><a href="Contact.html">Contact</a></li>
-         <li><a href="SiteReport.html">Site Report</a></li>
+       <li><a href="index.html">Home</a></li>
+       <li><a href="portfolio.html">Portfolio</a></li>
+       <li><a href="CV.html">Curriculum Vitae</a></li>
+       <li><a href="Contact.html">Contact</a></li>
+       <li><a href="SiteReport.html">Site Report</a></li>
     </ul>
   </nav>
-<!-- toggle for Hamburger icon -->
-  <label for="nav-toggle" class="nav-toggle-label">
-    <span></span>
-  </label>
+
 </header>
 <!-- Main Curriculum Vitae Starts here. -->
 <main class="cv_main">
